--- a/delivr-aide-react-website-1.0/public/index.html
+++ b/delivr-aide-react-website-1.0/public/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#3597D3" />
+  <meta name="description"
+    content="Delivr'aide est une association qui livre des denrées alimentaires et de première nécessité aux étudiants" />
   <!-- Icon include and different size handling -->
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/props/icon/delivr'aide-icon-16.png" sizes="16x16">
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/props/icon/delivr'aide-icon-32.png" sizes="32x32">
@@ -14,6 +15,8 @@
   <!-- Google fonts Fredoka One -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+  <!-- CSS Glider.js -->
+  <link rel="stylesheet" href="https://unpkg.com/glider-js@1.6.0/glider.min.css" />
   <title>Delivr'aide</title>
 </head>
 
