--- a/delivr-aide-react-website-1.0/public/index.html
+++ b/delivr-aide-react-website-1.0/public/index.html
@@ -15,8 +15,11 @@
   <!-- Google fonts Fredoka One -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-  <!-- CSS Glider.js -->
-  <link rel="stylesheet" href="https://unpkg.com/glider-js@1.6.0/glider.min.css" />
+  <!-- CSS Slick.js -->
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <title>Delivr'aide</title>
 </head>
 
