Corrected charte and politique

--- a/delivr-aide-react-website-1.0/public/index.html
+++ b/delivr-aide-react-website-1.0/public/index.html
@@ -24,6 +24,18 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- AOS script -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- Référencement -->
+  <meta name="description" content="">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords"
+    content="association étudiante, étudiant, deliveroo, livraisons, gratuit, uber solidaire, aide étudiant, covid, confinement, franprix, concours franprix, Paris, Lyon, Montpellier, coronavirus, couvre-feu, bénévole, bénévolat, kit, livreur, yovann, yova2n">
+  <meta name="news_keywords" content="sondage, presidentielle 2017, Macron, Lepen, debat">
+  <meta name="author" content="">
+  <meta property="og:title" content="delivr'aide" key="ogtitle" />
+  <meta property="og:description"
+    content="Delivr’aide constitue la première plateforme numérique en France permettant à des étudiants de bénéficier gratuitement d’un kit alimentaire et produits de première nécessité, livré directement à leur domicile."
+    key="ogdesc" />
+  <meta name="copyright" content="Delivr’aide" />
   <title>Delivr'aide</title>
 </head>
 
