Fixed city selector styling on build + Added meta tag description and main color

--- a/delivr-aide-react-website-1.0/public/index.html
+++ b/delivr-aide-react-website-1.0/public/index.html
@@ -24,14 +24,19 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- AOS script -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- Verification site Google -->
+  <meta name="google-site-verification" content="emGoR-SD8uoyywNyLGzRbprtZQ3bgkomzadd4db7xVc" />
   <!-- Référencement -->
   <meta name="description" content="">
   <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#E84C3C" />
   <meta name="keywords"
     content="association étudiante, étudiant, deliveroo, livraisons, gratuit, uber solidaire, aide étudiant, covid, confinement, franprix, concours franprix, Paris, Lyon, Montpellier, coronavirus, couvre-feu, bénévole, bénévolat, kit, livreur, yovann, yova2n">
   <meta name="news_keywords" content="sondage, presidentielle 2017, Macron, Lepen, debat">
   <meta name="author" content="">
   <meta property="og:title" content="delivr'aide" key="ogtitle" />
+  <meta name="description"
+    content="Delivr’aide constitue la première plateforme numérique en France permettant à des étudiants de bénéficier gratuitement d’un kit alimentaire et produits de première nécessité, livré directement à leur domicile.">
   <meta property="og:description"
     content="Delivr’aide constitue la première plateforme numérique en France permettant à des étudiants de bénéficier gratuitement d’un kit alimentaire et produits de première nécessité, livré directement à leur domicile."
     key="ogdesc" />
