Updated news meta tag

--- a/delivr-aide-react-website-1.0/public/index.html
+++ b/delivr-aide-react-website-1.0/public/index.html
@@ -32,7 +32,8 @@
   <meta name="theme-color" content="#E84C3C" />
   <meta name="keywords"
     content="association étudiante, étudiant, deliveroo, livraisons, gratuit, uber solidaire, aide étudiant, covid, confinement, franprix, concours franprix, Paris, Lyon, Montpellier, coronavirus, couvre-feu, bénévole, bénévolat, kit, livreur, yovann, yova2n">
-  <meta name="news_keywords" content="sondage, presidentielle 2017, Macron, Lepen, debat">
+  <meta name="news_keywords"
+    content="coronavirus, covid, uber solidaire, association étudiante, aide étudiant, kit alimentaire étudiant, kit alimentaire, yova2n">
   <meta name="author" content="">
   <meta property="og:title" content="delivr'aide" key="ogtitle" />
   <meta name="description"
