--- a/delivr-aide-react-website-1.0/public/index.html
+++ b/delivr-aide-react-website-1.0/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#3597D3" />
   <meta name="description"
-    content="Delivr'aide est une association qui livre des denrées alimentaires et de première nécessité aux étudiants" />
+    content="Delivr'aide constitue la première plateforme de livraison gratuite à destination des étudiants en difficulté." />
   <!-- Icon include and different size handling -->
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/props/icon/delivr'aide-icon-16.png" sizes="16x16">
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/props/icon/delivr'aide-icon-32.png" sizes="32x32">
@@ -27,7 +27,6 @@
   <!-- Verification site Google -->
   <meta name="google-site-verification" content="emGoR-SD8uoyywNyLGzRbprtZQ3bgkomzadd4db7xVc" />
   <!-- Référencement -->
-  <meta name="description" content="">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#E84C3C" />
   <meta name="keywords"
@@ -36,10 +35,8 @@
     content="coronavirus, covid, uber solidaire, association étudiante, aide étudiant, kit alimentaire étudiant, kit alimentaire, yova2n">
   <meta name="author" content="">
   <meta property="og:title" content="delivr'aide" key="ogtitle" />
-  <meta name="description"
-    content="Delivr’aide constitue la première plateforme numérique en France permettant à des étudiants de bénéficier gratuitement d’un kit alimentaire et produits de première nécessité, livré directement à leur domicile.">
   <meta property="og:description"
-    content="Delivr’aide constitue la première plateforme numérique en France permettant à des étudiants de bénéficier gratuitement d’un kit alimentaire et produits de première nécessité, livré directement à leur domicile."
+    content="Delivr'aide constitue la première plateforme de livraison gratuite à destination des étudiants en difficulté."
     key="ogdesc" />
   <meta name="copyright" content="Delivr’aide" />
   <title>Delivr'aide</title>
